# Pet

./: .flake8  README.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.js
logistics/: Dockerfile
logistics/api/v1/: endpoints.py
logistics/application/: commands.py
logistics/domain/: models.py
logistics/infrastructure/: db.py  kafka_producer.py
notifications/: Dockerfile  main.py  pyproject.toml
notifications/api/v1/: endpoints.py
notifications/application/: commands.py
notifications/domain/: services.py
notifications/infrastructure/: db.py  kafka_consumer.py
orders/: .env  Dockerfile
orders/api/v1/: endpoints.py
orders/application/: commands.py
orders/domain/: models.py
orders/infrastructure/: db.py  kafka_producer.py
