[project]
name = "pet"
version = "0.1.0"
description = ""
authors = [
    {name = "Павел",email = "87562110+AwakeGit@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "bson (>=0.5.10,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"

[tool.black]
line-length = 120
exclude = '''
/(
    \.venv
  | node_modules
  | frontend
  | __pycache__
  | migrations
)/'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".venv", "node_modules", "frontend", "__pycache__", "migrations"]
